force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__AllowClearAfterActivity__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__AllowClearAfterActivity__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the clearing of the Case Flag when a closed activity is added.

Set in the Case Flags Setup Wizard.</description>
    <label>Allow clear after activity</label>
    <type>Checkbox</type>
</CustomField>