force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__AllowClearAfterComment__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__AllowClearAfterComment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the clearing of the Case Flag after a public comment has been added to Case. 

Set in the Case Flags Setup Wizard.</description>
    <label>Allow clear after comment</label>
    <type>Checkbox</type>
</CustomField>