force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__AllowWriteAfterFile__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__AllowWriteAfterFile__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the Case Flag to automatically be set immediately after a file has been added to a Case by an external user. 

Set in the Case Flags Setup Wizard.</description>
    <label>Allow write after file</label>
    <type>Checkbox</type>
</CustomField>