force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__App_Branding_Updated__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__App_Branding_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App Branding Updated</label>
    <type>Checkbox</type>
</CustomField>