force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__BlankOffsetImage__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__BlankOffsetImage__c</fullName>
    <description>Id of image Document to be displayed in the Case Flag field when the flag is off.

Set in the Case Flags Setup Wizard.</description>
    <label>Blank Offset Image</label>
    <length>20</length>
    <type>Text</type>
</CustomField>