force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__BusinessHoursId__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__BusinessHoursId__c</fullName>
    <description>Standard Business Hours Id to use for default Aging</description>
    <label>Business Hours Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>