force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__BypassSharing__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__BypassSharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass sharing rules for specific use cases where access rights cannot be granted.</description>
    <label>Bypass Sharing</label>
    <type>Checkbox</type>
</CustomField>