force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Certificate_Name__c</fullName>
    <description>Unique name of connected app certificate.</description>
    <label>Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>