force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Clear_Follow_Up_On_Flag_Set__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Clear_Follow_Up_On_Flag_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically clear follow up on case flag set.</description>
    <label>Clear Follow Up On Flag Set</label>
    <type>Checkbox</type>
</CustomField>