force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__ClearFlagDays__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__ClearFlagDays__c</fullName>
    <description>Flags will be automatically cleared by Case Flags after the number of days specified</description>
    <label>Clear Flag Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>