force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__ClearFlagJobId__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__ClearFlagJobId__c</fullName>
    <description>Id of the Clear Flag Job</description>
    <label>Clear Flag Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>