force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__CompanyDomain__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__CompanyDomain__c</fullName>
    <description>The domain of the user&apos;s company needed to distinguish emails between users and their customers.

Set in the Case Flags Setup Wizard.</description>
    <label>Company Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>