force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Disable_Business_Hours_Batch_Retry__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Disable_Business_Hours_Batch_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Business Hours Batch Retry</label>
    <type>Checkbox</type>
</CustomField>