force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Enable_Follow_Up_Process__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Enable_Follow_Up_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable follow up process</label>
    <type>Checkbox</type>
</CustomField>