force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Enable_History__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Enable_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable History</label>
    <type>Checkbox</type>
</CustomField>