force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__EnabledActivityType__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__EnabledActivityType__c</fullName>
    <label>EnabledActivityType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>