force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__ExcludedUsers__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__ExcludedUsers__c</fullName>
    <description>A comma separated list of user ids which should not clear the case flag when adding a comment.

Set in the Case Flags Setup Wizard.</description>
    <label>Excluded Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>