force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Follow_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Follow_Up_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of hours after the Case Flag Date/Time when Follow up field will be displayed.</description>
    <label>Follow Up Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>