force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__HistoryCleanupBatchSize__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__HistoryCleanupBatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The number of records that each batch of the History Clean Up job will process.</description>
    <label>History Cleanup Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>