force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__HistoryCleanupJobHour__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__HistoryCleanupJobHour__c</fullName>
    <description>Hour of the day (0-23) the History Cleanup Job should run.</description>
    <label>History Cleanup Job Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>