force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__HistoryCleanupJobWeekday__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__HistoryCleanupJobWeekday__c</fullName>
    <description>Day of the week to run the History Cleanup Job.</description>
    <label>History Cleanup Job Weekday</label>
    <length>16</length>
    <type>Text</type>
</CustomField>