force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__IgnoreAutoResponse__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__IgnoreAutoResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IgnoreAutoResponse</label>
    <type>Checkbox</type>
</CustomField>