force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Initial_Comment_Threshold__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Initial_Comment_Threshold__c</fullName>
    <label>Initial Comment Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>