force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Initial_Interaction__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Initial_Interaction__c</fullName>
    <description>Custom Text on case creation</description>
    <label>Case creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>