force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__InsertTriggerErrorComments__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__InsertTriggerErrorComments__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable a private comment to be added to the Case if a trigger is unable update the Case Flag field due to error.</description>
    <label>Insert Trigger Error Comments</label>
    <type>Checkbox</type>
</CustomField>