force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset1Hex__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset1Hex__c</fullName>
    <defaultValue>&quot;37b605&quot;</defaultValue>
    <description>Color for flag 1</description>
    <label>Age 1 Hex</label>
    <length>30</length>
    <type>Text</type>
</CustomField>