force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset2Description__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset2Description__c</fullName>
    <defaultValue>&quot;Flag Level 2&quot;</defaultValue>
    <label>Age 2 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>