force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset2Hex__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset2Hex__c</fullName>
    <defaultValue>&quot;05a1da&quot;</defaultValue>
    <description>Color for flag 2</description>
    <label>Age 2 Hex</label>
    <length>30</length>
    <type>Text</type>
</CustomField>