force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset2Notifications__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset2Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age 2 Notifications</label>
    <type>Checkbox</type>
</CustomField>