force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset3Description__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset3Description__c</fullName>
    <defaultValue>&quot;Flag Level 3&quot;</defaultValue>
    <label>Age 3 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>