force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset3Hex__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset3Hex__c</fullName>
    <defaultValue>&quot;f9b629&quot;</defaultValue>
    <description>Color for flag 3</description>
    <label>Age 3 Hex</label>
    <length>30</length>
    <type>Text</type>
</CustomField>