force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset3Notifications__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset3Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age 3 Notifications</label>
    <type>Checkbox</type>
</CustomField>