force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset4Image__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset4Image__c</fullName>
    <label>Age 4 Image</label>
    <length>20</length>
    <type>Text</type>
</CustomField>