force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__OptimizeRoles__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__OptimizeRoles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optimize Roles</label>
    <type>Checkbox</type>
</CustomField>