force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Organization_Wide__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Organization_Wide__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Organization Wide</label>
    <type>Checkbox</type>
</CustomField>