force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__TimeOffset1__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__TimeOffset1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of hours to wait before displaying Age 1 Image in the Case Flag field. Set in the Case Flags Setup Wizard.</description>
    <label>Age 1 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>