force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__TimeOffset3__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__TimeOffset3__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Age 3 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>