force-app/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Track_Case_Ownership__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Track_Case_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Case Ownership</label>
    <type>Checkbox</type>
</CustomField>